Implemented flickr api, added drawer menu to choose api source.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="app_name">OnMap</string>
     <string name="title_activity_maps">OnMap</string>
 
+    <string-array name="api_sources">
+        <item name="instagram">Instagram</item>
+        <item name="flickr">Flickr</item>
+    </string-array>
+
 </resources>
