Base code for twitter photos powered by fabric.io api client.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string-array name="api_sources">
         <item name="instagram">Instagram</item>
         <item name="flickr">Flickr</item>
+        <item name="twitter">Twitter</item>
     </string-array>
 
 </resources>
