--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
         <item name="instagram">Instagram</item>
         <item name="flickr">Flickr</item>
         <item name="twitter">Twitter</item>
+        <item name="foursquare">Foursquare</item>
     </string-array>
 
 </resources>
