--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,12 @@
     <string name="title_activity_maps">OnMap</string>
     <string name="search_location_hint">Search location</string>
 
-    <string-array name="api_sources">
+    <string-array name="drawer_items">
         <item name="instagram">Instagram</item>
         <item name="flickr">Flickr</item>
         <item name="twitter">Twitter</item>
         <item name="foursquare">Foursquare</item>
+        <item name="prefs">Preferences</item>
     </string-array>
 
 </resources>
