Added rx events, added show on map button, ui fixes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="terrain">Terrain</string>
     <string name="prefs">Preferences</string>
 
+    <string name="heart">♥</string>
+
 </resources>
